# elsahoot

./: .gitignore  README.md  env.template
system/: .editorconfig  alembic.ini  pom.xml  pyproject.toml  requirements.txt  settings.py
system/app/: constant.py  main.py  settings.py
system/app/controller/: __init__.py  player.py  quiz.py  testcon.py
system/app/controller/dependency/: __init__.py  crud.py  ws.py
system/app/exception/: adviser.py  custom_exc.py
system/app/init/: __init__.py
system/app/mapper/: player.py  quiz.py
system/app/model/: __init__.py  association.py  base.py  player.py  quiz.py  riddle.py
system/app/repository/: __init__.py  crud.py  player.py  quiz.py  riddle.py
system/app/resource/: db.py  log.py  lorem.py  wshandler.py
system/app/viewmodel/: request.py  response.py
system/app/viewmodel/core/: base.py  player.py  quiz.py  riddle.py
system/console/: pom.xml
system/console/src/main/java/elsahoot/console/: Application.java
system/console/src/main/java/elsahoot/console/config/: InitConfig.java  WebConfig.java  WebSocketConfig.java
system/console/src/main/java/elsahoot/console/constant/: AppNumber.java  TableName.java
system/console/src/main/java/elsahoot/console/controller/: ChatController.java  HelloController.java  QuizController.java
system/console/src/main/java/elsahoot/console/dto/: ChatMessage.java
system/console/src/main/java/elsahoot/console/mapper/: IBaseMapper.java  (+3 more)
system/console/src/main/resources/: application.yaml
system/migration/: env.py
system/migration/versions/: e6e55d066bed_0_init_db.py
(+54 files in other folders)
