[tool.poetry]
name = "elsahoot-system"
version = "0.1.0"
description = ""
authors = ["San Dang <dangthaisan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
sqlalchemy = "2.0.36"
fastapi = "0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
alembic = "1.13.3"
psycopg = "3.2.3"
pandas = "2.2.3"
numpy = "2.1.2"
pydantic = "2.9.2"
pendulum = "3.0.0"
redis = "5.2.0"
httpx = "0.27.2"
python-slugify = "8.0.4"
faker = "30.8.1"
click = "8.1.7"
stamina = "24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
